edit oops text message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="toolbar_title_rates">Rates</string>
     <string name="work_offline">looks like you work offline</string>
     <string name="back_to_online">looks like you back to online</string>
-    <string name="oops_something_went_wrong">Oops something went wrong!</string>
+    <string name="oops_something_went_wrong">Oops something went wrong! \n looks like you forgot to turn on internet!</string>
     <string name="retry">retry!</string>
     <string name="currency_icon">currency icon</string>
 
